--- a/school-card.css
+++ b/school-card.css
@@ -1,4 +1,5 @@
 .test {
+    /*
     transform: rotate(270deg);
     font-size: 1rem;
     color: white;
@@ -6,9 +7,16 @@
     letter-spacing: 3px;
     text-align: center;
     position: absolute;
-    /*
+
+
+    */
+
+
+    
+        /*
+        
     bottom: 0;
-                margin-top: 50pt;
+    margin-top: 50%;
 
     margin-left: -50%;
                 left: 0;
@@ -17,23 +25,41 @@
 
                     margin-top: 65pt;
     margin-left: -35%;
-    
-    
-
-    */
-
+     
     top: calc(50% - 10px);
-    left: calc(50% - 50px);
     
-    white-space: nowrap;
-    /*
+    top: 50pt;
+    left: calc(50% - 50px);
     */
+
+   /*
+    white-space: nowrap;
+
+    writing-mode: vertical-rl;
+    */
+    writing-mode: vertical-rl;
+    text-orientation: upright;
+    padding-right: -5pt;
+    font-size: 13pt;
+
 
 }
 
 .test2 {
+    text-align: center;
+    padding-top: 30pt;
+    padding-left: 2pt;
+    /*
     height: 200px;
+    */
 }
 
-
-
+.card-text-master{
+        display: flex; /* equal height of the children */
+}
+.card-text-master gg1{
+    flex: 1; /* additionally, equal width */
+        
+    padding: 1em;
+    border: solid;
+}
